--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -52,6 +52,7 @@ LastExecutedLaunchName=Chrome
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=-842150451,Y=-842150451)
 MultipleInstancePositions=(X=801,Y=149)
+NewWindowPosition=(X=315,Y=143)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -77,7 +78,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.08.22-22.12.56
+BuildingEscape.TimeStamp=2017.08.22-22.26.00
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.07.12-05.20.31
 PakFile.LastCompileMethod=Unknown
@@ -1080,10 +1081,53 @@ SpotLightComponent.DistanceFieldShadows=True
 SpotLightComponent.Rendering=True
 SpotLightComponent.Tags=True
 SpotLightComponent.Cooking=True
+Openable_Door_BP_C.TransformCommon=True
+Openable_Door_BP_C.StaticMesh=True
+Openable_Door_BP_C.Materials=True
+Openable_Door_BP_C.Physics=True
+Openable_Door_BP_C.Collision=True
+Openable_Door_BP_C.Lighting=True
+Openable_Door_BP_C.Rendering=True
+Openable_Door_BP_C.Tags=True
+Openable_Door_BP_C.Cooking=True
+Openable_Door_BP_C.Input=True
+Openable_Door_BP_C.Actor=True
+Openable_Door_BP_C.Tick=True
+Openable_Door_BP_C.Replication=True
+Openable_Door_BP_C.Variable=True
+Openable_Door_BP_C.Sockets=True
+Openable_Door_BP_C.ComponentReplication=True
+Openable_Door_BP_C.Events=True
+K2Node_Timeline.GraphNodeDetail=True
+REINST_Openable_Door_BP_C_68.TransformCommon=True
+REINST_Openable_Door_BP_C_68.StaticMesh=True
+REINST_Openable_Door_BP_C_68.Materials=True
+REINST_Openable_Door_BP_C_68.Physics=True
+REINST_Openable_Door_BP_C_68.Collision=True
+REINST_Openable_Door_BP_C_68.Lighting=True
+REINST_Openable_Door_BP_C_68.Rendering=True
+REINST_Openable_Door_BP_C_68.Tags=True
+REINST_Openable_Door_BP_C_68.Cooking=True
+REINST_Openable_Door_BP_C_68.Input=True
+REINST_Openable_Door_BP_C_68.Actor=True
+OpenDoor.Variable=True
+OpenDoor.Sockets=True
+OpenDoor.ComponentReplication=True
+OpenDoor.Events=True
+REINST_Openable_Door_BP_C_78.TransformCommon=True
+REINST_Openable_Door_BP_C_78.StaticMesh=True
+REINST_Openable_Door_BP_C_78.Materials=True
+REINST_Openable_Door_BP_C_78.Physics=True
+REINST_Openable_Door_BP_C_78.Collision=True
+REINST_Openable_Door_BP_C_78.Lighting=True
+REINST_Openable_Door_BP_C_78.Rendering=True
+REINST_Openable_Door_BP_C_78.Tags=True
+REINST_Openable_Door_BP_C_78.Cooking=True
+REINST_Openable_Door_BP_C_78.Input=True
+REINST_Openable_Door_BP_C_78.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/DefaultPawn_Blueprint.DefaultPawn_Blueprint
 
 [RootWindow]
 ScreenPosition=X=53.000 Y=11.000
@@ -1168,8 +1212,12 @@ ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyPaths
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" \"Object.TrackSettings.FbxSettings.FbxSettings[0]\" \"Object.TrackSettings.FbxSettings.FbxSettings[0].PropertyPath\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
+Openable_Door_BP_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_Openable_Door_BP_C_68="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_Openable_Door_BP_C_78="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Openable_Door_BP.Openable_Door_BP;
 RecentlyPlaced=/Game/My_Pulse.My_Pulse;
 RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
 RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
@@ -1189,7 +1237,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
-RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1262,6 +1309,7 @@ DefaultPawn_Blueprint_C=DefaultPawn_Blueprint_C.Physics.ConstraintsGroup,
 /Game/DefaultPawn_Blueprint.DefaultPawn_Blueprint=0
 /Game/MyBuildingEscapeGameModeBase_BP.MyBuildingEscapeGameModeBase_BP=0
 /Game/My_Pulse.My_Pulse=1
+/Game/StarterContent/Props/SM_Door.SM_Door=0
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
@@ -1380,7 +1428,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=CompilerResultsLog
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
