--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1125,6 +1125,17 @@ REINST_Openable_Door_BP_C_78.Tags=True
 REINST_Openable_Door_BP_C_78.Cooking=True
 REINST_Openable_Door_BP_C_78.Input=True
 REINST_Openable_Door_BP_C_78.Actor=True
+REINST_Openable_Door_BP_C_96.TransformCommon=True
+REINST_Openable_Door_BP_C_96.StaticMesh=True
+REINST_Openable_Door_BP_C_96.Materials=True
+REINST_Openable_Door_BP_C_96.Physics=True
+REINST_Openable_Door_BP_C_96.Collision=True
+REINST_Openable_Door_BP_C_96.Lighting=True
+REINST_Openable_Door_BP_C_96.Rendering=True
+REINST_Openable_Door_BP_C_96.Tags=True
+REINST_Openable_Door_BP_C_96.Cooking=True
+REINST_Openable_Door_BP_C_96.Input=True
+REINST_Openable_Door_BP_C_96.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1215,6 +1226,7 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 Openable_Door_BP_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_Openable_Door_BP_C_68="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_Openable_Door_BP_C_78="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_Openable_Door_BP_C_96="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Openable_Door_BP.Openable_Door_BP;
